# imagenator

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  settings_example.py
imagenator/: __main__.py  api.py  app.py  bot.py  cache.py  detector.py  image.py  syft.py
